Update styles.css and main.js

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="title-gral">
       <div class="title">Virtual Drum</div>
 
-      <div class="keyboard">Play with the keyboard or Touch</div>
+      <div class="keyboard">Play with the Keyboard, Mouse or Touch</div>
     </div>
 
     <div class="box">
